<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_canvas"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:padding="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@drawable/bg_avatar_circle"
            android:gravity="center"
            android:text="P"
            android:textColor="@color/pure_white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="@color/pure_white"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/hidden_log_title"
        android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
        android:textColor="@color/pure_white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/history_subtitle"
        android:textColor="@color/mist_white" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_chip_active"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="18dp"
                android:paddingBottom="10dp"
                android:text="@string/history_chip_all"
                android:textColor="@color/pure_white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_chip_inactive"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="18dp"
                android:paddingBottom="10dp"
                android:text="@string/history_chip_academic"
                android:textColor="@color/mist_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_chip_inactive"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="18dp"
                android:paddingBottom="10dp"
                android:text="@string/history_chip_internship"
                android:textColor="@color/mist_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_chip_inactive"
                android:paddingLeft="18dp"
                android:paddingTop="10dp"
                android:paddingRight="18dp"
                android:paddingBottom="10dp"
                android:text="@string/history_chip_general"
                android:textColor="@color/mist_white" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerHiddenLog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:clipToPadding="false"
        android:layout_weight="1"
        android:paddingBottom="12dp" />

</LinearLayout>
